# 2025_Mueller_deHoop_Crowe_Mann

./: Readme.md
VUPenaltyTaker.Python/: .gitignore  main.py  pyproject.toml
VUPenaltyTaker.Python/data/Experiment_1/p1/: Trial_2022_4_22_11_19_42.json  Trial_2022_4_22_11_19_47.json  Trial_2022_4_22_11_19_52.json  Trial_2022_4_22_11_19_57.json  Trial_2022_4_22_11_20_02.json  Trial_2022_4_22_11_20_07.json  (+204 more)
VUPenaltyTaker.Python/results/exp1/: model.docx  model.txt  shot_distribution.docx  shot_distribution_by_gk.docx
VUPenaltyTaker.Python/results/exp2/: model.docx  model.txt  shot_distribution_table.docx
VUPenaltyTaker.Python/results/exp3/: model.docx  model.txt  outliers.txt  shot_distribution.docx
VUPenaltyTaker.Python/results/exp4/: model.docx  model.txt  outliers.txt  shot_distribution.docx
VUPenaltyTaker.Python/src/: domain.py  example_funcs.py  utils.py
VUPenaltyTaker.Python/src/experiment_1/: __init__.py  descriptive_figure.py  descriptive_table.py  model.py  predictions_figure.py  regression_table.py
VUPenaltyTaker.Python/src/experiment_2/: __init__.py  descriptive_figure.py  descriptive_table.py  model.py  predictions_figure.py  regression_table.py
VUPenaltyTaker.Python/src/experiment_3/: __init__.py  descriptive_table.py  model.py  predictions_figure.py  regression_table.py
VUPenaltyTaker.Python/src/experiment_4/: __init__.py  model.py  power_analysis.py  predictions_figure.py  regression_table.py  remove_outliers.py  remove_warm_up_trials.py
VUPenaltyTaker.Python/src/infra/: apa_word_tables.py  data_reader.py  persistence.py
(+22470 files in other folders)
